Fix sidebar, cohort-review wrapper, persistent scrollbar (#737)
* Fix sidebar, cohort-review wrapper, persistent scrollbar

* Add comment about height

--- a/ui/src/app/cohort-review/page-layout/page-layout.css
+++ b/ui/src/app/cohort-review/page-layout/page-layout.css
@@ -1,5 +1,5 @@
 .cohort-review-wrapper {
+  min-height: calc(100vh - 4rem);
   padding: 1rem;
-  margin-bottom: 1rem;
   position: relative;
 }
